# backend-core

./: .gitignore  depends.py  main.py  pyproject.toml
controllers/: auth.py  email.py  email_template.py  s3.py  user.py
mappers/: auth.py  email.py  email_template.py  users.py
models/: auth.py  config.py  email_template.py  user.py
routers/: auth.py  email_template.py  users.py
static/templates/email/: footer.html  password_reset.html  style.html  verify.html
static/templates/web/: password_reset.html  verification.html
tests/: backend-core.postman_collection.json
utils/: role_checker.py
