[tool.poetry]
name = "abe_server"
version = "0.1.0"
description = ""
authors = ["Tyler hanson"]

[tool.poetry.dependencies]
python = "^3.8"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.1"
databases = {extras = ["postgresql"], version = "^0.4.3"}
sendgrid = "^6.7.1"
fastapi = {extras = ["all"], version = "^0.66.0"}
boto3 = "^1.18.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
